# ot-harjoitustyo

./: .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.db
documentation/: architecture.md  changelog.md  how-to-guide.md  requirements_specification.md  testing-documentation.md  working-hours-record.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly_task_1.md  monopoly_task_2 ver-2.md  monopoly_task_2-do-not-review.md  monopoly_task_2.md  sequenceDiagram_task_3.md  sequenceDiagram_task_4.md
src/: build.py  config.py  database_connection.py  dummy_data.py  initialize_database.py  launch.py
src/entities/: contact.py  user.py
src/repositories/: contact_data_repository.py  db_contacts.csv  db_users.csv  user_repository.py
src/services/: console_io.py  contact_management.py  user_management.py
src/tests/: contact_repository_test.py  contact_test.py  start_classes_test.py  text_based_ui_test.py  user_repository_test.py  user_test.py
src/ui/: gui.py  gui_admin.py  gui_counselor.py  gui_create_account.py  gui_create_dummy_data.py  gui_login.py  gui_main_view.py  gui_menu.py  gui_theme.py  text_based_ui.py
