[tool.poetry]
name = "backup-data-submission-application"
version = "0.1.0"
description = ""
authors = ["Heidi Holappa <heidi.holappa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
